--- a/_site.yml
+++ b/_site.yml
@@ -20,4 +20,5 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
-output: distill::distill_article
+output: 
+  distill::distill_article
